infrastructure/istio/extras/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "default"
  namespace: "${infranamespaceprefix}istio-system"
spec:
  mtls:
    mode: "PERMISSIVE"
