infrastructure/istio/extras/gateway-pauwelslabs-com.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: pauwelslabs-com
  namespace: "${infranamespaceprefix}istio-ingress"
spec:
  selector:
    app: istio-gateway
    istio: gateway
  servers: []
