infrastructure/istio/extras/gateway-redact-ws.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: redact-ws
  namespace: "${infranamespaceprefix}istio-ingress"
spec:
  selector:
    app: istio-gateway
    istio: gateway
  servers: []
