infrastructure/istio/extras/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: pauwels-labs
  namespace: istio-ingress
spec:
  selector:
    app: istio-gateway
    istio: gateway
  servers: []
